Revert 189065 "Revert 188591 "cros: Fix app launch splash flicker.""
Didn't help, problem still happens after the revert:

http://build.chromium.org/p/chromium.memory.fyi/builders/Chromium%20OS%20%28valgrind%29%284%29/builds/18173/steps/memory%20test%3A%20unit/logs/stdio

> Revert 188591 "cros: Fix app launch splash flicker."
> 
> Somewhat speculative. Likely caused
> http://build.chromium.org/p/chromium.memory.fyi/builders/Chromium%20OS%20%28valgrind%29%284%29/builds/18170/steps/memory%20test%3A%20unit/logs/stdio :
> 
> [----------] 1 test from FrameworkUnitTestFail
> [ RUN      ] FrameworkUnitTestFail.ExpectFailFails
> [29081:29081:0319/113542:18317591233304:INFO:v8_unit_test.cc(247)] Running TestCase FrameworkUnitTestFail.ExpectFailFails
> [29081:29081:0319/113546:18317595437534:ERROR:v8_unit_test.cc(279)] undefinedFailed: RUN_TEST_F("FrameworkUnitTestFail","ExpectFailFails")
> Error: expectNotReached()
>     at assertNotReached (/mnt/data/b/build/slave/chromium-rel-chromeos-valgrind-tests-4/build/src/chrome/test/data/webui/test_api.js:871:11)
>     at expectFunc (/mnt/data/b/build/slave/chromium-rel-chromeos-valgrind-tests-4/build/src/chrome/test/data/webui/test_api.js:939:20)
>     at Object.<anonymous> (/mnt/data/b/build/slave/chromium-rel-chromeos-valgrind-tests-4/build/src/out/Release/test_data/chrome/test/data/unit/framework_unittest.gtestjs:39:3)
>     at Object.Test.runTest (/mnt/data/b/build/slave/chromium-rel-chromeos-valgrind-tests-4/build/src/chrome/test/data/webui/test_api.js:228:16)
>     at Object.TestCase.runTest (/mnt/data/b/build/slave/chromium-rel-chromeos-valgrind-tests-4/build/src/chrome/test/data/webui/test_api.js:365:22)
>     at Object.TestCase.run (/mnt/data/b/build/slave/chromium-rel-chromeos-valgrind-tests-4/build/src/chrome/test/data/webui/test_api.js:393:14)
>     at RUN_TEST_F (/mnt/data/b/build/slave/chromium-rel-chromeos-valgrind-tests-4/build/src/chrome/test/data/webui/test_api.js:1138:21)
>     at expectFunc (/mnt/data/b/build/sl

--- a/chrome/browser/resources/chromeos/app_launch/app_launch.css
+++ b/chrome/browser/resources/chromeos/app_launch/app_launch.css
@@ -10,7 +10,6 @@ body {
 }
 
 body {
-  background: #000;
   margin: 0;
   overflow: hidden;
   padding: 0;
